[tool.poetry]
name = "drf"
version = "0.1.0"
description = ""
authors = ["Renttor <denis30510@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
psycopg2-binary = "^2.9.7"
pillow = "^10.0.1"
python-dotenv = "^1.0.0"
djangorestframework = "^3.14.0"
ipython = "^8.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
